--- a/send.html
+++ b/send.html
@@ -22,8 +22,7 @@
     </div>
     <div class="mb-3">
         <label class="form-label">Message</label>
-        <textarea></textarea>
-        <input type="text" class="form-control">
+        <textarea class="form-control"></textarea>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </div>
